--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
+    "puppeteer": "^21.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
